Fix 'elements with opacity are not visible in production' bug

--- a/src/comments/comment/comment.scss
+++ b/src/comments/comment/comment.scss
@@ -59,13 +59,13 @@
 
   .comment__actions {
     display: flex;
-    opacity: 45%;
+    opacity: 0.45;
     flex-wrap: wrap;
   }
 }
 .comment:hover {
   .comment__actions {
-    opacity: 100%;
+    opacity: 1;
   }
 }
 @media (max-width: 650px) {
